--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       body { font-family:sans-serif; }
       body * { font-weight:200;}
-      #heatmapContainerWrapper { width:100%; height:100%;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; }
+      #heatmapContainerWrapper { width:167px; height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; }
       #heatmapContainer { width:100%; height:100%;}
       #heatmapLegend { background:white; position:absolute; bottom:0; right:0; padding:10px; }
       #min { float:left; }
