--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
             // add to dataset
             t.push({ x: x, y:y, value: c, radius: r });
           }*/
-          var c = ((Math.random()* max-min) >> 0) + min;
-            t.push({ x: 0, y:0, value: c, radius: 10 });
-            t.push({ x: 25, y:50, value: c, radius: 10});
-            t.push({ x: 50, y:100, value: c, radius: 10 });
+            t.push({ x: 0, y:0, value: 50, radius: 10 });
+            t.push({ x: 25, y:50, value: 50, radius: 10});
+            t.push({ x: 50, y:100, value: 50, radius: 10 });
 
           var init = +new Date;
           // set the generated dataset
