--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
             // add to dataset
             t.push({ x: x, y:y, value: c, radius: r });
           }*/
-            t.push({ x: 50, y:70, value: 500, radius: 100 });
-            t.push({ x: 100, y:70, value: 500, radius: 100});
-            t.push({ x: 75, y:250, value: 500, radius: 100 });
+            var c = ((Math.random()* max-min) >> 0) + min;
+            var r = (Math.random()* 80) >> 0;
+
+            t.push({ x: 50, y:70, value: c, radius: r });
+            t.push({ x: 100, y:70, value: c, radius: r});
+            t.push({ x: 75, y:250, value: c, radius: r });
 
           var init = +new Date;
           // set the generated dataset
