--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             var c = ((Math.random()* max-min) >> 0) + min;
             var r = (Math.random()* 80) >> 0;
 
-            t.push({ x: 50, y:70, value: c, radius: r });
+            t.push({ x: 50, y:70, value: c, radius: 500 });
             t.push({ x: 100, y:70, value: c, radius: r});
             t.push({ x: 75, y:250, value: c, radius: r });
 
