--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             var c = ((Math.random()* max-min) >> 0) + min;
             var r = (Math.random()* 80) >> 0;
 
-            t.push({ x: 50, y:120, value: c, radius: r });
-            t.push({ x: 100, y:120, value: c, radius: r});
-            t.push({ x: 75, y:300, value: c, radius: r });
+            t.push({ x: 50, y:120, value: c, radius: 200 });
+            t.push({ x: 100, y:120, value: c, radius: 200});
+            t.push({ x: 75, y:300, value: c, radius: 200 });
 
           var init = +new Date;
           // set the generated dataset
