--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
             t.push({ x: 50, y:120, value: 10, radius: 20 });
             t.push({ x: 120, y:130, value: 20, radius: 20});
-            t.push({ x: 75, y:300, value: 70, radius: 20 });
+            t.push({ x: 75, y:300, value: 80, radius: 20 });
 
           var init = +new Date;
           // set the generated dataset
           heatmap.setData({
-            min: min,
-            max: max,
+            min: 0,
+            max: 100,
             data: t
           });
           console.log('took ', (+new Date) - init, 'ms');
