--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body * { font-weight:200;}
       #heatmapContainerWrapper { width:167px; height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; }
       #heatmapContainer { width:100%; height:100%;}
-      #heatmapLegend { background:white; position:absolute; bottom:0; right:0; padding:10px; }
+      #heatmapLegend { background:white;  bottom:0; right:0; padding:10px; }
       #min { float:left; }
       #max { float:right; }
       h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200;}
@@ -64,7 +64,7 @@
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
@@ -112,19 +112,20 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="heatmapContainerWrapper">
-      <div id="heatmapContainer">
+                <div id="heatmapContainerWrapper">
+                <div id="heatmapContainer">
 
-      </div>
-      <div id="heatmapLegend">
-        <h2>Descriptive Legend Title</h2>
-        <span id="min"></span>
-        <span id="max"></span>
-        <img id="gradient" src="" style="width:100%" />
+                </div>
+                <div id="heatmapLegend">
+                <h2>Descriptive Legend Title</h2>
+                <span id="min"></span>
+                <span id="max"></span>
+                <img id="gradient" src="" style="width:100%" />
       </div>
     </div>
        
     <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
+            
           </div>
           <div class="chart-notes">
             Notes about this chart
