--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body * { font-weight:200;}
       #heatmapContainerWrapper { height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; }
       #heatmapContainer { width:100%; height:100%;}
-      #heatmapLegend { background:white; position:absolute; bottom:0; right:0; padding:10px; }
+      #heatmapLegend { background:white; bottom:0; right:0; padding:10px; }
       #min { float:left; }
       #max { float:right; }
       h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200;}
@@ -242,9 +242,9 @@
             var c = ((Math.random()* max-min) >> 0) + min;
             var r = (Math.random()* 80) >> 0;
 
-            t.push({ x: 200, y:120, value: 25, radius: 20 });
-            t.push({ x: 270, y:130, value: 0, radius: 20});
-            t.push({ x: 225, y:300, value: 75, radius: 20 });
+            t.push({ x: 300, y:120, value: 25, radius: 20 });
+            t.push({ x: 370, y:130, value: 0, radius: 20});
+            t.push({ x: 320, y:300, value: 75, radius: 20 });
 
           var init = +new Date;
           // set the generated dataset
