--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
             var c = ((Math.random()* max-min) >> 0) + min;
             var r = (Math.random()* 80) >> 0;
 
-            t.push({ x: 300, y:120, value: 25, radius: 20 });
-            t.push({ x: 370, y:130, value: 0, radius: 20});
-            t.push({ x: 320, y:300, value: 75, radius: 20 });
+            t.push({ x: 30%, y:120, value: 25, radius: 20 });
+            t.push({ x: 60%, y:130, value: 0, radius: 20});
+            t.push({ x: 45%, y:300, value: 75, radius: 20 });
 
           var init = +new Date;
           // set the generated dataset
