--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       body { font-family:sans-serif; }
       body * { font-weight:200;}
-      #heatmapContainerWrapper { width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; }
-      #heatmapContainer { width:100%; height:100%;}
+      #heatmapContainerWrapper { width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; text-align: center;}
+      #heatmapContainer { width:100%; height:100%;display: inline-block;}
       #heatmapLegend { background:white; bottom:0; right:0; padding:10px; }
       #min { float:left; }
       #max { float:right; }
@@ -243,7 +243,7 @@
             var r = (Math.random()* 80) >> 0;
 
             t.push({ x: 30, y:120, value: 25, radius: 20 });
-            t.push({ x: 110, y: 140, value: 90, radius: 20});
+            t.push({ x: 120, y: 140, value: 90, radius: 20});
             t.push({ x: 75, y:300, value: 75, radius: 20 });
 
           var init = +new Date;
