--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       body { font-family:sans-serif; }
       body * { font-weight:200;}
-      #heatmapContainerWrapper { width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center; text-align: center;}
-      #heatmapContainer { width:100%; height:100%;display: inline-block;}
+      #heatmapContainerWrapper { width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center;display: inline-block;}
+      #heatmapContainer { width:100%; height:100%;}
       #heatmapLegend { background:white; bottom:0; right:0; padding:10px; }
       #min { float:left; }
       #max { float:right; }
@@ -48,15 +48,15 @@
         <a class="navbar-brand" href="../">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="navbar-brand" href="./">Layouts &raquo; Thirds Grid</a>
+        <a class="navbar-brand" href="./">Smart Insole - Dashboard</a>
       </div>
       <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-          <li><a href="https://keen.io">Home</a></li>
+        <!--<ul class="nav navbar-nav navbar-left">
+          <li><a href="#">Dash</a></li>
           <li><a href="https://keen.io/team">Team</a></li>
           <li><a href="https://github.com/keenlabs/dashboards/tree/gh-pages/layouts/thirds-grid">Source</a></li>
           <li><a href="https://groups.google.com/forum/#!forum/keen-io-devs">Community</a></li><li><a href="http://stackoverflow.com/questions/tagged/keen-io?sort=newest&pageSize=15">Technical Support</a></li>
-        </ul>
+        </ul>-->
       </div>
     </div>
   </div>
@@ -111,7 +111,7 @@
           <div class="chart-title">
             Cell Title
           </div>
-          <div class="chart-stage">
+          <div class="chart-stage" style="text-align: center;">
                 <div id="heatmapContainerWrapper">
                 <div id="heatmapContainer">
 
@@ -124,7 +124,7 @@
           </div>
           <div class="chart-notes">
             <div id="heatmapLegend">
-                <h2>Descriptive Legend Title</h2>
+                
                 <span id="min"></span>
                 <span id="max"></span>
                 <img id="gradient" src="" style="width:100%" />
