--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Layouts &raquo; Thirds Grid</title>
+  <title>Smart Insole - Dashboard</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
     <style>
       body, html, h2 { margin:0; padding:0; height:100%;}
@@ -45,9 +45,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../">
+        <!--<a class="navbar-brand" href="../">
           <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
+        </a>-->
         <a class="navbar-brand" href="./">Smart Insole - Dashboard</a>
       </div>
       <div class="navbar-collapse collapse">
