--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     
-  <script src="bluetooth.js"></script>
   <meta charset="utf-8">
   <title>Smart Insole - Dashboard</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
@@ -43,8 +42,6 @@
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <!--<a class="navbar-brand" href="../">
@@ -198,10 +195,8 @@
 
   <!-- Project Analytics -->
   <script type="text/javascript" src="../../assets/js/keen-analytics.js"></script>
-</body>
-</html>
-
- <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
+  <!-- Footer Script-->
+      <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
     <script>
       window.onload = function() {
         // helper function
@@ -335,3 +330,9 @@ demoWrapper.onmouseout = function() {
 
  
     </script>
+  <script src="bluetooth.js"></script>
+
+</body>
+</html>
+
+ 
