--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <div id="grid-1-1">
             <div class="col-md-3">
             <button id="connect" class="btn btn-success">Connetti</button>
+            <img src="assets/img/bluetooth.png" width="200" height="200" />
             </div>
             <div class="col-md-3">
             <button id="#" class="btn btn-primary">Static Evaluation</button>        
