Update admin dashboard

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
            <div class="col-sm-6 col-lg-3">
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
-                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block;">
-                      <img src="assets/img/bluetooth.png" width="300" height="300" />
+                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
+                      <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
                       <button id="connect" class="btn btn-success">Connect</button>
@@ -89,8 +89,8 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
-                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block;">
-                      <img src="assets/img/bluetooth.png" width="300" height="300" />
+                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
+                      <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
                         <button id="#" class="btn btn-primary">Static Evaluation</button>   
@@ -103,8 +103,8 @@
              <div class="col-sm-6 col-lg-3">
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
-                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block;">
-                      <img src="assets/img/bluetooth.png" width="300" height="300" />
+                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
+                      <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
             <button id="#" class="btn btn-warning">Dynamic Evaluation</button>
@@ -118,8 +118,8 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
-                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block;">
-                      <img src="assets/img/bluetooth.png" width="300" height="300" />
+                    <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
+                      <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <disv style="text-align: center;">
                         <button id="#" class="btn btn-danger">Heatmap</button>
