--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
                       <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
-                    <disv style="text-align: center;">
+                    <div style="text-align: center;">
                         <button id="#" class="btn btn-danger">Heatmap</button>
                         <br>
                       <small class="text-muted">Connect with STM32</small>
@@ -129,7 +129,7 @@
                   </div>
                 </div>
             </div>               
-              </div>
+         </div>
           </div>
           </div>
           <div class="chart-notes">
