--- a/index.html
+++ b/index.html
@@ -122,9 +122,14 @@
                       <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
+                        <form>
+                            Times (from 10 and 90 sec):
+                        <input type="number" name="time-heatmap" min="10" max="90">
+                        </form>
+                        <br>
                         <button id="#" class="btn btn-danger">Heatmap</button>
                         <br>
-                      <small class="text-muted">Connect with STM32</small>
+                      <small class="text-muted">Return the feet's heatmap after selected time</small>
                     </div>
                   </div>
                 </div>
