--- a/index.html
+++ b/index.html
@@ -164,26 +164,28 @@ require(['c3', 'jquery'], function(c3, $) {
     var chart = c3.generate({
       bindto: '#chart-wrapper', // id of chart wrapper
       data: {
-        row: [
-            // each row data
-          ['data1', 7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 90, 13.9, 9.6],
-          
+        columns: [
+            // each columns data
+          ['data1', 7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
+          ['data2', 3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
         ],
         labels: true,
         type: 'line', // default type of chart
         colors: { 
-          'data1': tabler.colors["blue"]
+          'data1': tabler.colors["blue"],
+          'data2': tabler.colors["green"]
         },
         names: {
             // name of each serie
           'data1': 'Tokyo',
+          'data2': 'London'
         }
       },
       axis: {
-        y: {
+        x: {
           type: 'category',
           // name of each category
-          categories: ['Avampiede', '', 'Retropiede']
+          categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun']
         },
       },
       legend: {
