--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
+<!-- Require.js -->
+  <script src="_includes/js/require.js" type="text/javascript"></script>  
+
 </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
