--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
 <!-- Require.js -->
-  <script src="_includes/js/require.js" type="text/javascript"></script>  
+  <script src="assets/js/require.js" type="text/javascript"></script>  
 
 </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
