--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.3.2/holder.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
   <script>
     Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
   </script>
@@ -156,7 +158,7 @@
     <h3 class="card-title">Chart name</h3>
   </div>
   <div class="card-body">
-    <div id="chart-wrapper" style="height: 16rem"></div>
+<canvas id="myChart"></canvas>
   </div>
 </div>
 
@@ -401,43 +403,23 @@ demoWrapper.onmouseout = function() {
  
     </script>
 
-<script>
-$(document).ready(function(){
-    var chart = c3.generate({
-      bindto: '#chart-wrapper', // id of chart wrapper
-      data: {
-        columns: [
-            // each columns data
-          ['data1', 7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
-          ['data2', 3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-        ],
-        labels: true,
-        type: 'line', // default type of chart
-        colors: { 
-          'data1': tabler.colors["blue"],
-          'data2': tabler.colors["green"]
-        },
-        names: {
-            // name of each serie
-          'data1': 'Tokyo',
-          'data2': 'London'
-        }
-      },
-      axis: {
-        x: {
-          type: 'category',
-          // name of each category
-          categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun']
-        },
-      },
-      legend: {
-                show: false, //hide legend
-      },
-      padding: {
-        bottom: 0,
-        top: 0
-      },
-    });
-  });
-</script>
- 
+ <script>
+     var ctx = document.getElementById('myChart').getContext('2d');
+     var chart = new Chart(ctx, {
+    // The type of chart we want to create
+        type: 'line',
+
+    // The data for our dataset
+    data: {
+        labels: ["1", "2", "3", "4", "5", "6", "7"],
+        datasets: [{
+            label: "Bilanciamento piede",
+            backgroundColor: 'rgb(255, 99, 132)',
+            borderColor: 'rgb(255, 99, 132)',
+            data: [0, 10, 5, 2, 20, -30, 45],
+        }]
+    },
+
+    // Configuration options go here
+    options: {}
+});</script>
