--- a/index.html
+++ b/index.html
@@ -422,4 +422,9 @@ demoWrapper.onmouseout = function() {
 
     // Configuration options go here
     options: {}
-});</script>
+});
+
+var gradientStroke = ctx.createLinearGradient(500, 0, 100, 0);
+gradientStroke.addColorStop(0, "#00A000");
+gradientStroke.addColorStop(1, "#FF0000");
+</script>
