--- a/index.html
+++ b/index.html
@@ -404,7 +404,12 @@ demoWrapper.onmouseout = function() {
     </script>
 
  <script>
-     var ctx = document.getElementById('myChart').getContext('2d');
+     var gradient = ctx.createLinearGradient(0, 0, 0, 100);
+gradient.addColorStop(0.7, 'red');
+gradient.addColorStop(0.8, 'yellow');
+gradient.addColorStop(1, 'green');
+
+var ctx = document.getElementById('myChart').getContext('2d');
      var chart = new Chart(ctx, {
     // The type of chart we want to create
         type: 'line',
@@ -414,17 +419,13 @@ demoWrapper.onmouseout = function() {
         labels: ["1", "2", "3", "4", "5", "6", "7"],
         datasets: [{
             label: "Bilanciamento piede",
-            backgroundColor: 'rgb(255, 99, 132)',
-            borderColor: 'rgb(255, 99, 132)',
-            data: [0, 10, 5, 2, 20, -30, 45],
+            backgroundColor: gradient,
+            borderColor: 'rgb(50, 10, 10)',
+            data: [0, 10, 100, 2, 20, -30, 100],
         }]
     },
 
     // Configuration options go here
     options: {}
 });
-
-var gradientStroke = ctx.createLinearGradient(500, 0, 100, 0);
-gradientStroke.addColorStop(0, "#00A000");
-gradientStroke.addColorStop(1, "#FF0000");
 </script>
