--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ gradient.addColorStop(1, 'green');
 </script>
 <!-- Aggiungi passo -->
 <script>
-fuction addData(chart,passo,valore){
+function addData(chart,passo,valore){
 				chart.data.labels.push(passo);
 
 				chart.data.datasets.forEach(function(dataset) {
