--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="row row-cards">
                 
                 
-           <div class="col-sm-12">
+           <div class="col-sm-6 col-lg-3">
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
                     <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="row">
-      <div class="col-sm-6 col-md-6">
+      <div class="col-sm-12 col-md-12">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
