--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.3.2/holder.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-
+<script src="https://rawgit.com/chartjs/chartjs-plugin-annotation/master/chartjs-plugin-annotation.js"></script>
   <script>
     Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
   </script>
@@ -437,7 +437,22 @@ gradient.addColorStop(1, 'green');
     },
 
     // Configuration options go here
-    options: {}
+    options: {
+    annotation: {
+      annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 5,
+        borderColor: 'green',
+        borderWidth: 4,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 5%'
+        }
+      }]
+    }
+  }
 });
 </script>
 <!-- Aggiungi passo -->
