Update valori tolleranza

--- a/index.html
+++ b/index.html
@@ -445,12 +445,96 @@ gradient.addColorStop(1, 'green');
         scaleID: 'y-axis-0',
         value: 5,
         borderColor: 'green',
-        borderWidth: 4,
+        borderWidth: 1,
         label: {
           enabled: false,
           content: 'Tolleranza 5%'
         }
-      }]
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value:6,
+        borderColor: 'yellow',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 6%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 15,
+        borderColor: 'yellow',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 15%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 16,
+        borderColor: 'red',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 16%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: -5,
+        borderColor: 'green',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 5%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value:-6,
+        borderColor: 'yellow',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 6%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: -15,
+        borderColor: 'yellow',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 15%'
+        }
+      }],
+annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: -16,
+        borderColor: 'red',
+        borderWidth: 1,
+        label: {
+          enabled: false,
+          content: 'Tolleranza 16%'
+        }
+    }]
     }
   }
 });
