--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			<!-- Charts dynamic evaluation-->
               <div class="card">
   <div class="card-header">
-    <h3 class="card-title">Chart name</h3>
+    <h3 class="card-title">Valutazione dinamica</h3>
   </div>
   <div class="card-body">
 <canvas id="myChart"></canvas>
@@ -171,7 +171,7 @@
           </div>
             
           <div class="chart-notes">
-            Notes about this chart
+            Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).
           </div>
         </div>
       </div>
