--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ var ctx = document.getElementById('myChart').getContext('2d');
             label: "Bilanciamento piede",
             //backgroundColor: gradient,
             borderColor: 'rgb(50, 10, 10)',
-	    cubicInterpolationMode: 'monotone',
+	    lineTension: 0,
             data: [0, 4, -3, 10, -2, -1, 2],
         }]
     },
