--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ var ctx = document.getElementById('myChart').getContext('2d');
         labels: ["1", "2", "3", "4", "5", "6", "7"],
         datasets: [{
             label: "Bilanciamento piede",
-            //backgroundColor: gradient,
+            backgroundColor: 'rgba(0, 0, 0, 0)',
             borderColor: 'rgb(50, 10, 10)',
 	    lineTension: 0,
             data: [0, 4, -3, 10, -2, -1, 2],
