--- a/index.html
+++ b/index.html
@@ -526,20 +526,19 @@ function addData(chart,passo,valore){
 				chart.update();
 };
 </script>
-<<<<<<< HEAD
 <script>
 
-		var barChartData = {
+	var barChartData = {
 			labels: ['1'],
 			datasets: [{
 				label: 'Avampiede',
-				backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+				backgroundColor: 'red',
 				borderColor: 'red',
 				borderWidth: 1
 				
 			}, {
 				label: 'Retropiede',
-				backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+				backgroundColor: 'blue',
 				borderColor: 'blue',
 				borderWidth: 1
 			}]
@@ -560,9 +559,5 @@ function addData(chart,passo,valore){
 					}
 				}
 			});
-
-		};
-
 </script>
 =======
->>>>>>> 337bf62d771d3aadf821e89eba333e10763c473e
