update Bar Chart

--- a/index.html
+++ b/index.html
@@ -528,6 +528,9 @@ function addData(chart,passo,valore){
 </script>
 <script>
 var barChartData = {
+            scaleSteps : 3,
+            scaleStepWidth : 50,
+            scaleStartValue : 0,
 			labels: ['1'],
 			datasets: [{
 				label: 'Avampiede',
