--- a/index.html
+++ b/index.html
@@ -528,9 +528,6 @@ function addData(chart,passo,valore){
 </script>
 <script>
 var barChartData = {
-            scaleSteps : 3,
-            scaleStepWidth : 50,
-            scaleStartValue : 0,
 			labels: ['1'],
 			datasets: [{
 				label: 'Avampiede',
@@ -563,6 +560,19 @@ var barChartData = {
 				},
 
     // Configuration options go here
+tooltips: {
+						mode: 'index',
+						intersect: false
+					},
+					responsive: true,
+					scales: {
+						xAxes: [{
+							stacked: true,
+						}],
+						yAxes: [{
+							stacked: true
+						}]
+					}
     options: {
     annotation: {
       annotations: [{
@@ -580,7 +590,7 @@ var barChartData = {
         type: 'line',
         mode: 'horizontal',
         scaleID: 'y-axis-0',
-        value:55,
+        value:-55,
         borderColor: 'blue',
         borderWidth: 1,
 	label: {
