--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x180/white">
-          </div>
+<div class="card-body">
+<canvas id="myChartStabML"></canvas>
+  </div>          </div>
           <div class="chart-notes">
             Notes about this chart
           </div>
@@ -233,8 +234,9 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x180/white">
-          </div>
+              <div class="card-body">
+                  <canvas id="myChartStabAP"></canvas>
+    </div>             </div>
           <div class="chart-notes">
             Notes about this chart
           </div>
@@ -602,4 +604,92 @@ var barChartData = {
     }
   }
 			});
+</script>
+
+ <script>
+
+var ctx = document.getElementById('myChartStabAP').getContext('2d');
+//Create gradient
+//var gradient = ctx.createLinearGradient(0, 0, 0, 100);
+//gradient.addColorStop(0, 'red');
+//gradient.addColorStop(0.95, 'yellow');
+//gradient.addColorStop(1, 'green');
+     var chart = new Chart(ctx, {
+	
+
+    // The type of chart we want to create
+        type: 'line',
+	
+
+    // The data for our dataset
+    data: {
+        labels: ["1", "2", "3", "4", "5", "6", "7"],
+        datasets: [{
+            label: "Stabilometria AP",
+            backgroundColor: 'rgba(0, 0, 0, 0)',
+            borderColor: 'rgb(50, 10, 10)',
+	    lineTension: 0,
+            data: [0, 0.1, -1, .2, -1, -1, 0.5],
+        }]
+    },
+
+    // Configuration options go here
+    options: {
+    annotation: {
+      annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 1,
+        borderColor: 'green',
+        borderWidth: 1
+      }
+    }]
+    }
+  }
+});
+
+</script>
+ <script>
+
+var ctx = document.getElementById('myChartStabML').getContext('2d');
+//Create gradient
+//var gradient = ctx.createLinearGradient(0, 0, 0, 100);
+//gradient.addColorStop(0, 'red');
+//gradient.addColorStop(0.95, 'yellow');
+//gradient.addColorStop(1, 'green');
+     var chart = new Chart(ctx, {
+	
+
+    // The type of chart we want to create
+        type: 'line',
+	
+
+    // The data for our dataset
+    data: {
+        labels: ["1", "2", "3", "4", "5", "6", "7"],
+        datasets: [{
+            label: "Stabilometria ML",
+            backgroundColor: 'rgba(0, 0, 0, 0)',
+            borderColor: 'rgb(50, 10, 10)',
+	    lineTension: 0,
+            data: [0, 0.1, -1, .2, -1, -1, 0.5],
+        }]
+    },
+
+    // Configuration options go here
+    options: {
+    annotation: {
+      annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 0,
+        borderColor: 'green',
+        borderWidth: 1
+      }
+    }]
+    }
+  }
+});
 </script>
