Update AP ML - Title

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <div class="col-sm-6 col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            Esame Stabilometrico - Oscillazioni M/L (piano frontale destra/sinistra)
           </div>
           <div class="chart-stage">
 <div class="card-body">
@@ -231,7 +231,7 @@
       <div class="col-sm-6 col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            Esame Stabilometrico - Oscillazioni A/P (piano sagittale avanti/indietro)
           </div>
           <div class="chart-stage">
               <div class="card-body">
@@ -242,23 +242,6 @@
           </div>
         </div>
       </div>
-
-      <div class="col-sm-6 col-md-6">
-        <div class="chart-wrapper">
-          <div class="chart-title">
-            Cell Title
-          </div>
-          <div class="chart-stage">
-            <img data-src="holder.js/100%x180/white">
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
-          </div>
-        </div>
-      </div>
-      
-    
-
   </div>
        </div>
   <div class="container-fluid">
