--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   </div>
        </div>
   <div class="container-fluid">
-    <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
+    <p class="small text-muted">Layout built by <a href="https://keen.io">Keen IO</a></p>
   </div>
 
   <!-- Project Analytics -->
@@ -432,7 +432,7 @@ var ctx = document.getElementById('myChart').getContext('2d');
           enabled: true,
           content: 'Avampiede'
         }
-      },{
+      },/*{
         type: 'line',
         mode: 'horizontal',
         scaleID: 'y-axis-0',
@@ -457,14 +457,14 @@ var ctx = document.getElementById('myChart').getContext('2d');
           enabled: true,
           content: 'Avampiede'
         }
-      },{
+      },*/{
         type: 'line',
         mode: 'horizontal',
         scaleID: 'y-axis-0',
         value: -3.1,
         borderColor: 'green',
         borderWidth: 1
-      },{
+      }/*,{
         type: 'line',
         mode: 'horizontal',
         scaleID: 'y-axis-0',
@@ -492,7 +492,7 @@ var ctx = document.getElementById('myChart').getContext('2d');
         label: {
           enabled: true,
           content: 'Retropiede'
-        }
+        }*/
     }]
     }
   }
