--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
-                        <button id="#" class="btn btn-primary">Static Evaluation</button>   
+                        <button id="staticButton" class="btn btn-primary" onclick="staticFunction()">Static Evaluation</button>   
                         <br>
                         <small class="text-muted">Connect with STM32</small>
                     </div>
