Added script timer.js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
-
+<script src="timer.js"></script>
 </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
