--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
                     <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
-                      <img src="assets/img/bluetooth.png" width="150" height="150" />
+                      <img src="assets/img/StaticEvaluation_Icon.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
                         <button id="staticButton" class="btn btn-primary" onclick="staticFunction()">Static Evaluation</button>   
@@ -114,7 +114,7 @@
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
                     <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
-                      <img src="assets/img/bluetooth.png" width="150" height="150" />
+                      <img src="assets/img/SynamicEvaluation_Icon.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
             <button id="#" class="btn btn-warning">Dynamic Evaluation</button>
