Update button - Dynamic Evaluation

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
                             Times (from 10 and 99 sec):
                         <input id="static-seconds" type="number" name="time-heatmap" min="10" max="99" value="15">
                         </form>
-                        <br>
                         <small class="text-muted">Start the static evaluation</small>
                     </div>
                   </div>
@@ -117,7 +116,7 @@
                       <img src="assets/img/SynamicEvaluation_Icon.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
-            <button id="#" class="btn btn-warning">Dynamic Evaluation</button>
+            <button id="#" class="btn btn-danger">Dynamic Evaluation</button>
         <br>
                       <small class="text-muted">Connect with STM32</small>
                     </div>
