--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                       <img src="assets/img/SynamicEvaluation_Icon.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
-            <button id="#" class="btn btn-danger">Dynamic Evaluation</button>
+            <button id="#" class="btn btn-warning">Dynamic Evaluation</button>
         <br>
                       <small class="text-muted">Connect with STM32</small>
                     </div>
