--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
   </script>
   <script src="timer.js"></script>
+  <script src="static.js"></script>
   <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
   <script src="bluetooth.js"></script>
   <!-- keen-analysis@1.2.2 -->
